<resources>
  <string name="app_name">AppStory3</string>
  <string name="signup">Daftar</string>
  <string name="login">Masuk</string>
  <string name="upload">Upload</string>
  <string name="camera">Camera</string>
  <string name="gallery">Gallery</string>
  <string name="message_welcome_page">Mau belajar Android, iOS, Machine Learning, Cloud, Front-End, Back-End, dan bidang IT lainnya? Di Dicoding aja!</string>
  <string name="title_welcome_page">Selamat datang di Dicoding!</string>
  <string name="title_signup_page">Lengkapi data dirimu di bawah ini ya</string>
  <string name="email">Email</string>
  <string name="password">Password</string>
  <string name="message_login_page">Masukkan dulu datamu ya</string>
  <string name="title_login_page">Sudah siap untuk upgrade skill?</string>
  <string name="name">Nama</string>
  <string name="mn_favorite">Favorite</string>
  <string name="logout">Keluar</string>
  <string name="gambar_kosong">Silakan masukkan berkas gambar terlebih dahulu.</string>
  <string name="map">Map</string>
  <string name="title_activity_maps">MapsActivity</string>
  <!-- Strings used for fragments for navigation -->
  <string name="no_data">Data Tidak Ditemukan</string>
  <string name="title_favorite">Favorite Module</string>
  <string name="hint_desc">Description</string>
  <string name="content_desc_preview_img">Preview Image</string>
  <string name="content_desc_floating_btn">Floating Button</string>

</resources>